--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,3 +1,12 @@
+production:
+  clients:
+    default:
+      uri: ENV['MONGODB_URI']
+      options:
+        server_selection_timeout: 5
+
+
+
 development:
   # Configure available database clients. (required)
   clients:
