--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,7 +1,7 @@
 production:
   clients:
     default:
-      uri: ENV['MONGODB_URI']
+      uri: <%= ENV['MONGODB_URI'] %>
       options:
         server_selection_timeout: 5
 
